# pico-logicemu

./: CMakeLists.txt  README.md  logicemu.c  pinconfig.h
